--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "sass": "^1.72.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "nuxt-icon": "^0.6.9"
   }
 }
