--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxi prepare"
   },
   "dependencies": {
+    "@formkit/nuxt": "^1.6.1",
     "@nuxt/content": "^2.12.1",
     "@nuxt/image": "^1.4.0",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/seo": "^2.0.0-rc.9",
     "nuxt": "^3.11.1",
+    "nuxt-mail": "^5.0.0",
     "sass": "^1.72.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
