--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt-icon": "^0.6.9"
   }
 }
